add Model, change style

--- a/src/main/resources/templates/fragments/event.html
+++ b/src/main/resources/templates/fragments/event.html
@@ -5,29 +5,29 @@
 </head>
 <body>
 	<div class="event" th:fragment="event">
-		<h2>Termineinladung</h2>
+		<h2 th:text="${event.title}">Termineinladung</h2>
 		<div class="info">
 			<div class="date">
 				<p class="info-date">
-					Datum: <span>15. Januar 2016</span>
+					Datum: <span th:text="${event.date}">15. Januar 2016</span>
 				</p>
 				<p class="info-time">
-					Uhrzeit: <span>14:30 Uhr</span>
+					Uhrzeit: <span th:text="${event.time}">14:30 Uhr</span>
 				</p>
 			</div>
 			<div class="address">
 				<p>
-					Adresse: <span>Hauptstra&szlig;e 1234 Teststadt</span>
+					Adresse: <span th:text="${event.address}">Hauptstra&szlig;e 1234 Teststadt</span>
 				</p>
 			</div>
 			<div class="description">
 				<p>
-					Informationen: <span>Nunc lacinia ante nunc ac lobortis. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus ornare mi ut ante amet placerat aliquet. Volutpat eu sed ante lacinia sapien lorem accumsan varius montes viverra nibh in adipiscing. Lorem ipsum dolor vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing sed feugiat eu faucibus. Integer ac sed amet praesent. Nunc lacinia ante nunc ac gravida.</span>
+					Informationen: <span th:text="${event.information}">weitere Informationen</span>
 				</p>
 			</div>
 			<div class="link">
 				<p>
-					Link zum Veranstalter: <span><a href="#">Webseite</a></span>
+					Link zum Veranstalter: <span><a th:text="${event.link}" th:href="${event.link}">Link</a></span>
 				</p>
 			</div>
 		</div>
