--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -10,7 +10,7 @@
 	<div class="content" id="info">
 		<h2>Hier entsteht ein Angebot zur Vernetzung und zum gemeinsamen Austausch.</h2>
 	</div>
-	<div class="content" id="termine">
+	<div class="content" id="termine" th:each="event : ${events}">
 		<div th:replace="fragments/event :: event"></div>
 	</div>
 	<div class="content" id="contact">
