--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -4,8 +4,6 @@ body {
 	color: #444444;
 	font-family: "Raleway", Arial, Helvetica, sans-serif;
 	font-weight: 400;
-	font-size: 1rem;
-	line-height: 1.65;
 }
 
 .header ul {
@@ -14,10 +12,9 @@ body {
 	padding: 0;
 	overflow: hidden;
 	background-color: #333;
-	position: -webkit-sticky; position : sticky; top : 0;
+	top: 0;
 	width: 100%;
 	top: 0;
-	position: sticky;
 }
 
 @media screen and (min-width: 800px) {
