--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -1,19 +1,56 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:th="http://www.thymeleaf.org">
-<head>
-<title>Hello Spring Security</title>
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<link th:href="@{/style.css}" rel="stylesheet">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<head th:replace="fragments/header :: header">
 </head>
 <body>
 	<div th:replace="fragments/header :: navigation"></div>
-	<h1>This is a secured page!</h1>
-	<p>
-		<a href="#" th:href="@{/}">Back to home page</a>
-		<a href="#" th:href="@{/logout}">Logout</a>
-	</p>
+	<div class="content">
+		<h1>This is a secured page!</h1>
+		Authenticated username:
+		<div sec:authentication="name"></div>
+		Authenticated user roles:
+		<div sec:authentication="principal.authorities"></div>
+	</div>
+	<div class="content">
+		<h1>Edit Event</h1>
+		<form th:action="@{/admin}" method="post">
+			<div class="form-group hide">
+				<label for="id">ID</label> <input type="text" id="id"
+					name="id" th:value="${event?.id}">
+			</div>
+			<div class="form-group">
+				<label for="title">Title</label> <input type="text" id="title"
+					name="title" th:value="${event?.title}">
+			</div>
+			<div class="form-group">
+				<label for="date">Date</label> <input type="text" id="date"
+					name="date" th:value="${event?.date}">
+			</div>
+			<div class="form-group">
+				<label for="time">Time</label> <input type="text" id="time"
+					name="time" th:value="${event?.time}">
+			</div>
+			<div class="form-group">
+				<label for="address">Address</label> <input type="text"
+					id="address" name="address" th:value="${event?.address}">
+			</div>
+			<div class="form-group">
+				<label for="information">Information</label>
+				<textarea rows="4" cols="50" id="information"
+					name="information" th:text="${event?.information}"></textarea>
+			
+			</div>
+			<div class="form-group">
+				<label for="link">Link</label> <input type="text" id="link"
+					name="link" th:value="${event?.link}">
+			</div>
+			<div class="form-group">
+				<input type="submit" name="save-submit" id="save-submit"
+					value="save">
+			</div>
+		</form>
+	</div>
 	<div th:replace="fragments/footer :: footer"></div>
 </body>
 </html>
